--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,18 @@
 body {
   background-color: rgb(22, 22, 22);
   color: #fff;
+  font-size: 18px;
+  background: url('img/cover.jpg') 0 0 no-repeat;
+}
+
+@media (max-width: 1200px) {
+  p {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1200px) {
+  p {
+    font-style: italic;
+  }
 }
