--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,21 @@
 @use "fonts";
 
 body {
-  background-color: rgb(22, 22, 22);
+  background-color: rgb(22, 22, 22) !important;
   color: #fff;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   background: url("img/cover.jpg") 0 0 no-repeat;
+}
+
+@media (max-width: 1200px) {
+  body {
+    font-style: italic;
+  }
+}
+
+@media (max-width: 1200px) {
+  body {
+    font-style: italic;
+  }
 }
